# third_party_weston

./: BUILD.gn  OAT.xml  README.OpenSource  bundle.json  weston.cfg  weston.ini  weston.rc
clients/: simple-dmabuf-egl-hos.c  simple-dmabuf-egl.c  simple-egl-hos.c
compositor/: main.c  weston-screenshooter.c
desktop-shell/: shell.c
include/: config.h
include/EGL/: eglplatform.h
include/libweston/: backend-hdi.h  backend-wayland.h  libweston.h  weston-log.h
ivi-shell/: ivi-layout-export.h  ivi-layout-private.h  ivi-layout.c
libweston/: bindings.c  compositor.c  content-protection.c  git-version.h  input.c  launcher-direct.c  libinput-device.c  libinput-device.h  libinput-seat-export.h  libinput-seat.c  libweston-internal.h  linux-dmabuf.c  linux-dmabuf.h  noop-renderer.c  pixman-renderer-protected.h  pixman-renderer.c  pixman-renderer.h  screenshooter.c  soft_vsync.cpp  soft_vsync.h  tde-render-part.c  tde-render-part.cpp  tde-render-part.h  trace.cpp  trace.h  weston_bytrace.cpp  weston_bytrace.h  zoom.c
libweston-desktop/: libweston-desktop.c
libweston/backend-drm/: drm-gbm.c  drm-internal.h  drm.c  fb.c  kms.c  modes.c
libweston/backend-drm/auth/: wayland_drm_auth.h  wayland_drm_auth_server.c  wayland_drm_auth_server.h
libweston/backend-fbdev/: fbdev.c
libweston/backend-hdi/: hdi_backend.cpp  hdi_backend.h  hdi_head.cpp  hdi_head.h  hdi_output.cpp  hdi_output.h  hdi_renderer.cpp  hdi_renderer.h  main.cpp
libweston/renderer-gl/: egl-glue.c  gl-renderer-internal.h  gl-renderer.c  gl-renderer.h
libweston/renderer-mix/: mix_renderer.cpp  mix_renderer.h
protocol/: drm-auth.xml
shared/: simple_gbm.h  xalloc.c
